add HelperCache and path to manifest

--- a/pushreceiver/src/main/AndroidManifest.xml
+++ b/pushreceiver/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application>
 
         <service
-            android:name=".MyFirebaseMessagingService"
+            android:name="pro.devonics.push.MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
