--- a/pushreceiver/build.gradle
+++ b/pushreceiver/build.gradle
@@ -39,17 +39,18 @@ dependencies {
 
     //implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    //implementation 'androidx.appcompat:appcompat:1.4.1'
+    //implementation 'com.google.android.material:material:1.5.0'
 
     //Coroutines
     //implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
     //implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
 
     // Firebase
-    implementation platform('com.google.firebase:firebase-bom:28.3.1')
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.5'
+    //implementation platform('com.google.firebase:firebase-bom:28.3.1')
     //implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-messaging-ktx'
+    //implementation 'com.google.firebase:firebase-messaging-ktx'
 
     //Retrofit2
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
