update for 12&13 android

--- a/pushreceiver/build.gradle
+++ b/pushreceiver/build.gradle
@@ -8,12 +8,12 @@ group = 'com.github.PushDevonics'
 version = '1.0.0'
 
 android {
-    compileSdk 31
+    compileSdk 33
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         minSdk 21
-        targetSdk 31
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -38,7 +38,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     //implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     //implementation 'androidx.appcompat:appcompat:1.4.1'
     //implementation 'com.google.android.material:material:1.5.0'
 
@@ -47,7 +47,8 @@ dependencies {
     //implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
 
     // Firebase
-    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.5'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.8'
+    implementation 'androidx.work:work-runtime:2.8.0-alpha04'
     //implementation platform('com.google.firebase:firebase-bom:28.3.1')
     //implementation 'com.google.firebase:firebase-analytics-ktx'
     //implementation 'com.google.firebase:firebase-messaging-ktx'
