--- a/settings.gradle
+++ b/settings.gradle
@@ -3,10 +3,11 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
         //jcenter() // Warning: this repository is going to shut down soon
     }
 }
 //rootProject.name = "PushLibrary"
 //include ':app'
 include ':pushreceiver'
-include ':mypushtest'
+//include ':mypushtest'
