--- a/pushreceiver/build.gradle
+++ b/pushreceiver/build.gradle
@@ -5,11 +5,11 @@ plugins {
 }
 
 group = 'com.github.PushDevonics'
-version = '1.0.0'
+version = '1.0.1'
 
 android {
     compileSdk 33
-    buildToolsVersion "30.0.3"
+    //buildToolsVersion "30.0.3"
 
     defaultConfig {
         minSdk 21
@@ -73,7 +73,7 @@ afterEvaluate {
                 from components.release
                 groupId = 'com.github.PushDevonics'
                 artifactId = 'push-devonics-flutter'
-                version = '1.0.0'
+                version = '1.0.1'
             }
         }
     }
